# compact-rag

./: .env.example  .gitignore  Dockerfile  Makefile  QUICKSTART.md  README.md  README.zh-cn.md  alembic.ini  coverage.xml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
config/: default.yaml  production.yaml  storage.yaml
docs/.obsidian/: workspace.json
docs/design/: CONTRACTS.md  DESIGN.md  compact-rag-design.md
docs/processes/: audit-issues-2026-05-24.md  implementation.md
docs/research/: contracts-analysis.md  design-contracts-rag.md  file-storage.md  hybrid-retrieval.md  table-to-markdown.md  tool-calling.md
docs/task/: 00-README.md  01-config-management.md  02-common-infrastructure.md  03-relational-database.md  04-document-ingestion.md  05-table-extraction.md  06-embedding-service.md  08-hybrid-retrieval.md  09-llm-generation.md  10-tool-calling.md  11-rag-pipeline.md  12-api-layer.md  13-file-storage.md  14-streamlit-admin.md  15-database-design.md  16-error-handling.md  17-testing-strategy.md  18-deployment.md  19-performance-optimization.md
src/compact_rag/: __init__.py  main.py
src/compact_rag/admin/: __init__.py  app.py  client.py  config.py
src/compact_rag/api/: deps.py  router.py  schemas.py
tests/: conftest.py
tests/test_admin/: test_client.py  test_config_unit.py
tests/test_api/: conftest.py  test_api_keys.py  test_chat.py  test_chat_extra.py  test_collections.py  test_contract_integration.py  test_conversations.py  test_deps.py  test_documents.py  test_ingestion.py  test_ingestion_jobs.py  test_real_integration.py  test_schemas_validation.py  test_system.py  test_system_extra.py
tests/test_common/: test_exceptions.py  test_logger.py
tests/test_config/: test_settings.py  test_settings_full.py
tests/test_embedding/: test_service.py
tests/test_generation/: test_llm_clients.py  test_llm_clients_extra.py  test_llm_ollama.py  test_prompt.py
tests/test_ingestion/: test_chunker.py  test_chunker_edges.py  test_loader.py  test_loader_full.py  test_pipeline.py  test_pipeline_full.py  test_table_extractor.py
tests/test_rag/: test_pipeline.py  test_pipeline_extra.py  test_pipeline_full.py
tests/test_retrieval/: test_dense.py  test_fusion.py  test_fusion_edges.py  test_query_transformer.py  test_reranker.py  test_retriever.py  test_retriever_extra.py  test_sparse.py  test_sparse_edges.py
tests/test_storage/: test_db_models.py  test_db_models_full.py  test_engine.py  test_file_storage.py  test_file_storage_extra.py  test_file_storage_full.py  test_repositories.py  test_repositories_full.py  test_vector_store.py  test_vector_store_extra.py
tests/test_tool/: test_builtin.py  test_engine.py  test_engine_full.py  test_schema.py  test_schema_full.py
(+64 files in other folders)
