[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "compact-rag"
version = "0.1.0"
description = "Enterprise RAG system - lightweight, production-ready document retrieval and Q&A"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "compact-rag", email = "dev@compact-rag.local"}
]
keywords = ["rag", "retrieval", "llm", "embeddings", "vector-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "chromadb>=0.5",
    "sentence-transformers>=2.7",
    "loguru>=0.7",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "jinja2>=3.1",
    "rank-bm25>=0.2",
    "jieba>=0.42",
    "numpy>=1.26",
    "pypdf>=4.0",
    "python-docx>=1.1",
    "beautifulsoup4>=4.12",
    "markdownify>=0.12",
    "pdfplumber>=0.10",
    "camelot-py[cv]>=0.11; platform_system != 'Windows'",
    "opencv-python-headless>=4.9; platform_system != 'Windows'",
    "ollama>=0.1",
    "openai>=1.30",
    "pyyaml>=6.0",
    "rich>=13.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "httpx>=0.27",
    "aiomysql>=0.1",
    "python-dotenv>=1.0",
]
admin = [
    "streamlit>=1.35",
    "plotly>=5.22",
]
ollama = [
    "ollama>=0.1",
]
minio = ["minio>=7.2"]
oss = ["oss2>=2.18"]
kodo = ["qiniu>=7.13"]
s3 = ["boto3>=1.34"]
all = ["compact-rag[dev,admin,minio,oss,kodo,s3,ollama]"]

[project.scripts]
compact-rag = "compact_rag.main:app"

[project.urls]
Homepage = "https://github.com/compact-rag/compact-rag"
Issues = "https://github.com/compact-rag/compact-rag/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/compact_rag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: slow tests requiring actual LLM/Embedding services",
    "integration: integration tests",
    "unit: unit tests",
    "real_integration: tests against a live running service over real network",
]

[tool.coverage.run]
source = ["src/compact_rag"]
omit = [
    "*/test_*",
    "*/migrations/*",
    "*/main.py",
    "*/admin/*",
]

[tool.coverage.report]
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
